# SCF_MRJD_RS

./: .gitignore  Cargo.lock_bk  Cargo.toml  Makefile  Notes.md  README.md  callgrind.out
.github/: openblas_install.sh
.github/workflows/: build.yml
Psi4_HF_test/: Notes.md  Psi4_compare.ipynb  basis_set_Psi4.ipynb  h2o_test.out  h2o_testV2.out  ipython_h2o_setup.py  psi.10870.clean  psi.1439.clean  psi.1810.clean  psi.19657.clean  psi.2431.clean  psi.2483.clean  psi.2629.clean  psi.579.clean  psi.632.clean  psi4_setup_h2.py  water_HF.xyz  water_HF.xyz.bak
TMP_Chem_Python_Scripts/: angles.py  oop.py
inp/: allene_bohr.xyz  masses.csv  real_xyz_geom.xyz  real_xyz_geom_std.xyz
inp/Project2/: 3c1b.hess  3c1b.xyz  benzene.hess  benzene.xyz  h2o.hess
inp/Project3/STO-3G/: h2o_v2.xyz
inp/Project3_1/: h2o.xyz
inp/Project3_1/STO-3G/: h2o_v2_std.xyz
inp/Project3_2/basis/: def2-svp.1.json
inp/Project3_2/basis_sets/: def2-svp.gbs  def2-tzvp.gbs  def2-tzvpp.gbs  sto-3g.gbs  sto-3g.gbs.bak
inp/Project3_2/geom/: h2.xyz
jupyter/: downloaded_excvr.ipynb  rust_testing.ipynb
src/: angles.py  main.rs  main_Project1_DONE.rs  main_Project2_DONE.rs  main_old.rs  molecule.rs  print_utils.rs  torsions.py
src/Crawford_projects/: mod.rs  project1.rs  project2.rs  project3_1.rs
src/SCF_from_scratch/: mod.rs  project3_2.rs  project3_3.rs  project3_3_h2o.rs
src/basis_sets/: 6-311g.gbs  6-311g_st.gbs  6-311g_st_st.gbs  cc-pVDZ.gbs  cc-pVTZ.gbs  def2-qzvp.gbs  def2-tzvp.gbs  def2-tzvpp.gbs  sto-3g.gbs  sto-6g.gbs
src/dev_SCF_from_scratch/: project3_2.rs  project3_3.rs  project3_3_h2o.rs
src/molecule/: geom.rs  geometry.rs  mod.rs  molecule.rs  wfn.rs
test_inputs/: Spiroundecan.xyz  water90.xyz
test_outputs/: Spiroundecan.out  water.out
(+8 files in other folders)
