[package]
name = "SCF_MRJD_RS"
version = "0.1.0"
author = "Martin Dagleish"
edition = "2021" # Rust edition to use

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features = ["openblas-system"]}
physical_constants = "0.5.0"
humantime = "2.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
