[package]
name = "SCF_MRJD_RS"
version = "0.1.0"
author = "Martin Dagleish"
edition = "2021" # Rust edition to use

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["rayon"]}
rayon = {version = "1.7.0"}
# blas-src = { version = "0.8.0", features = ["openblas"] }
# openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
ndarray-linalg = {version = "0.16.0", features = ["openblas-system"]}
physical_constants = "0.5.0"
humantime = "2.1.0"
boys = "0.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
clap = { version = "4.3.0", features = ["derive"] }
